fix: modal overlay covers the entire height of the page

--- a/src/common/floq/components/FloqModal/styles.module.scss
+++ b/src/common/floq/components/FloqModal/styles.module.scss
@@ -5,7 +5,6 @@
   z-index: 1;
   top: 0;
   left: 0;
-  text-align: center;
 
   width: 100%;
   height: 100%;
@@ -14,13 +13,10 @@
 }
 
 .modal {
-  display: inline-block;
-  width: auto;
-  height: auto;
-
-  text-align: initial;
-
-  margin: 10% auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: $half-spacing;
 
   background-color: $blank-white;
